# Bookstack-MCP

./: .dockerignore  .env  .gitignore  COMMIT_SUMMARY.md  Dockerfile  FIX-ENVIRONMENT-VARIABLES.md  HTTP-TRANSPORT.md  IMPROVEMENT-PLAN.md  INSPECTOR-QUICK-START.md  INSPECTOR-SESSION-RESULTS.md  MCP-INSPECTOR-VALIDATION.md  MCP-TOOLS-WRITE-OPERATIONS.md  MIGRATION-SUMMARY.md  QUICK-IMPROVEMENTS.md  README.md  SCHEMA-SIZE-LIMIT-FIX.md  compose.yaml  copy-scripts.js  docker-compose.http.yml  docker-compose.yml  opencode.json  package-lock.json  package.json  pyproject.toml  read_book_39.py  test-inspector-readiness.py  test_simplified_tools.py  tsconfig.json  vitest.config.ts
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/: Bookstack-MCP-create-page-investigation.md  FastMCP-Migration-Plan.md  Huly-Query-Tool-Enhancement-Proposal.md  LETTA_COMPATIBILITY.md  LETTA_FIX_SUMMARY.md  MCP-Schema-Strict-Mode-Fix.md  PRD-Image-Gallery-Management.md  TROUBLESHOOTING.md  Tool-Consolidation-Plan.md  bookstack-schema-fix.md
everything/: .env  Dockerfile  index.js  package-lock.json  package.json  test-agent.js
everything/src/: index.js
fastmcp_server/: __init__.py  my_server.py  my_server_simplified.py  requirements.txt  run_stdio.py
fastmcp_server/bookstack/: __init__.py  api_client.py  cache.py  content_operations.py  image_handling.py  metrics.py  schemas.py  tools.py  tools_selective.py  tools_simplified.py  validators.py
fastmcp_server/tests/: conftest.py  test_batch_operations.py  test_book_filters.py  test_cache_invalidation.py  (+19 more)
src/: DEPRECATED.md  index.ts
(+84 files in other folders)
